--- a/src/app/components/menu/menu.scss
+++ b/src/app/components/menu/menu.scss
@@ -1,23 +1,24 @@
 .menu {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   width: 100%;
   height: 59px;
   background-color: #dedede;
 
+  &__content {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    max-width: 1060px;
+    height: 100%;
+  }
+
   .container {
     height: 100%;
     display: flex;
     align-items: center;
-
-    &--left {
-      margin-left: 110px;
-    }
-
-    &--right {
-      margin-right: 110px;
-    }
   }
 
   .item {
